# segment_tree_cpp

./: CMakeLists.txt  readme.md
include/: segment_tree.hpp
tests/: CMakeLists.txt  input_actions.txt  input_initial_values.txt  input_values.txt  main.cpp  output_expected_values.txt  tests_basic_functionality.cpp  tests_random_test.cpp  tests_user_defined_data_type.cpp
